--- a/androidurlrouter/build.gradle
+++ b/androidurlrouter/build.gradle
@@ -1,5 +1,12 @@
 apply plugin: 'com.android.library'
 
+ext {
+
+    PUBLISH_GROUP_ID = 'com.android.siri0s'
+    PUBLISH_ARTIFACT_ID = 'android-url-router'
+    PUBLISH_VERSION = '1.0.0'
+}
+
 android {
     compileSdkVersion 23
     buildToolsVersion "24.0.0"
@@ -29,3 +36,5 @@ dependencies {
     testCompile 'org.mockito:mockito-core:1.10.19'
 
 }
+
+apply from: 'https://raw.githubusercontent.com/blundell/release-android-library/master/android-release-aar.gradle'
