--- a/androidurlrouter/build.gradle
+++ b/androidurlrouter/build.gradle
@@ -2,9 +2,9 @@ apply plugin: 'com.android.library'
 
 ext {
 
-    PUBLISH_GROUP_ID = 'com.android.siri0s'
+    PUBLISH_GROUP_ID = 'com.sirios'
     PUBLISH_ARTIFACT_ID = 'android-url-router'
-    PUBLISH_VERSION = '1.0.5'
+    PUBLISH_VERSION = '1.0.6'
 }
 
 android {
