--- a/androidurlrouter/src/main/AndroidManifest.xml
+++ b/androidurlrouter/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest package="com.android.siri0s.androidurlrouter"
+<manifest package="com.sirios.androidurlrouter"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
