--- a/androidurlrouter/build.gradle
+++ b/androidurlrouter/build.gradle
@@ -1,10 +1,11 @@
 apply plugin: 'com.android.library'
+apply plugin: 'de.mobilej.unmock'
 
 ext {
 
     PUBLISH_GROUP_ID = 'com.sirios'
     PUBLISH_ARTIFACT_ID = 'android-url-router'
-    PUBLISH_VERSION = '1.0.6'
+    PUBLISH_VERSION = '1.0.7'
 }
 
 android {
@@ -34,7 +35,44 @@ dependencies {
     testCompile 'junit:junit:4.12'
     // Optional -- Mockito framework
     testCompile 'org.mockito:mockito-core:1.10.19'
+    testCompile 'org.powermock:powermock-api-mockito:1.4.12'
+    testCompile 'org.powermock:powermock-module-junit4:1.6.2'
+}
 
+unMock {
+    // URI to download the android-all.jar from. e.g. https://oss.sonatype.org/content/groups/public/org/robolectric/android-all/
+    downloadFrom 'https://oss.sonatype.org/content/groups/public/org/robolectric/android-all/6.0.0_r1-robolectric-0/android-all-6.0.0_r1-robolectric-0.jar'
+
+    /*keep "android.widget.BaseAdapter"
+    keep "android.widget.ArrayAdapter"*/
+    keep "android.os.Bundle"
+    /*keepStartingWith "android.database.MatrixCursor"
+    keep "android.database.AbstractCursor"
+    keep "android.database.CrossProcessCursor"
+    keepStartingWith "android.text.TextUtils"
+    keepStartingWith "android.util."
+    keepStartingWith "android.text."
+    keepStartingWith "android.content.ContentValues"
+    keepStartingWith "android.content.ComponentName"
+    keepStartingWith "android.content.ContentUris"
+    keepStartingWith "android.content.ContentProviderOperation"
+    keepStartingWith "android.content.ContentProviderResult"
+    keepStartingWith "android.content.UriMatcher"
+    keepStartingWith "android.content.Intent"
+    keep "android.location.Location"
+    keepStartingWith "android.content.res.Configuration"*/
+    keepStartingWith "org."
+    keepStartingWith "libcore."
+    /*keepStartingWith "com.android.internal.R"
+    keepStartingWith "com.android.internal.util."*/
+    keep "android.net.Uri"
+
+    keepAndRename "java.nio.charset.Charsets" to "xjava.nio.charset.Charsets"
+
+    delegateClass "android.os.AsyncTask"
+
+    keep "android.os.Parcel"
+    delegateClass "android.hardware.Sensor"
 }
 
 apply from: 'https://raw.githubusercontent.com/blundell/release-android-library/master/android-release-aar.gradle'
