Change downloadFrom for unMock

--- a/androidurlrouter/build.gradle
+++ b/androidurlrouter/build.gradle
@@ -41,7 +41,7 @@ dependencies {
 
 unMock {
     // URI to download the android-all.jar from. e.g. https://oss.sonatype.org/content/groups/public/org/robolectric/android-all/
-    downloadFrom 'https://oss.sonatype.org/content/groups/public/org/robolectric/android-all/6.0.0_r1-robolectric-0/android-all-6.0.0_r1-robolectric-0.jar'
+    //downloadFrom 'https://oss.sonatype.org/content/groups/public/org/robolectric/android-all/6.0.0_r1-robolectric-0/android-all-6.0.0_r1-robolectric-0.jar'
 
     /*keep "android.widget.BaseAdapter"
     keep "android.widget.ArrayAdapter"*/
